First react components added with nice styling

--- a/devsearch-web-ui/public/index.html
+++ b/devsearch-web-ui/public/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="styles/app.css" />
   
     <title>DevSearch - Connect with Developers!</title>
-  </head>s
+  </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
