--- a/devsearch-web-ui/public/index.html
+++ b/devsearch-web-ui/public/index.html
@@ -8,13 +8,12 @@
     <title>DevSearch</title>
     <!-- Favicon -->
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
-
+    <!-- Icon - IconMonster -->
     <link rel="stylesheet" href="https://cdn.iconmonstr.com/1.3.0/css/iconmonstr-iconic-font.min.css" />
     <!-- Mumble UI -->
     <link rel="stylesheet" href="uikit/styles/uikit.css" />
     <!-- Dev Search UI -->
     <link rel="stylesheet" href="styles/app.css" />
-  
     <title>DevSearch - Connect with Developers!</title>
   </head>
   <body>
