--- a/devsearch-web-ui/public/uikit/index.html
+++ b/devsearch-web-ui/public/uikit/index.html
@@ -9,9 +9,9 @@
   <meta name="description"
     content="An open source social media platform and public forum for questions and discussions, built for developers." />
   <!-- Mumble UI -->
-  <link rel="stylesheet" href="styles/uikit.css" />
+  <link rel="stylesheet" href="/styles/uikit.css" />
   <!-- Mumble UI -->
-  <link rel="stylesheet" href="app.css" />
+  <link rel="stylesheet" href="/app.css" />
 
   <!-- Highlight.js Styles -->
   <link rel="stylesheet" href="https://unpkg.com/@highlightjs/cdn-assets@10.7.1/styles/default.min.css" />
